8. Onto Kubernetes/production/complex/k8s/server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: server # targeting the server pods
  ports:
    - port: 5000
      targetPort: 5000
